--- a/styles/index.css
+++ b/styles/index.css
@@ -10,3 +10,24 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.search-input {
+color: grey;
+}
+
+.video-list {
+margin-left: auto;
+margin-right: auto;
+width: 650px;
+}
+
+.video-container {
+border-color: black;
+border-style: solid;
+border-width: 3px;
+margin: 75px 0px;
+}
+
+.video-info {
+display: block;
+list-style-type: none;
+}
